# helios-engvm

./: .gitignore  README.md  _nc_virsh.sh  console.sh  create.sh  destroy.sh  download.sh  recreate.sh  ssh.sh  ssh_setup.sh
aws/: gen_userdata.sh
config/: defaults.sh
image/: .gitignore  Makefile  README.md  aws.sh  falcon-bits.sh  falcon-env.sh  generic.sh  image.sh  iso.sh  make_new_installers.sh  netstack-bits.sh  qemu.sh  refresh_coffee.sh  setup.sh  stlouis-bits.sh  strap.sh  ufs.sh  upload_ami.sh  workaround.d  zfs.sh
image/etc/: defaults.sh  projects.toml
image/experiments/: run_builder.sh  run_builder_full_tar.sh  run_builder_netdev.sh  run_builder_opte.sh  run_builder_vm.sh
image/experiments/jobs/: builder.sh  builder_full_tar.sh  builder_netdev.sh  builder_opte.sh  builder_vm.sh
image/experiments/wackadoo/: README.md  cpiofiles.txt  mk.sh
image/lib/: common.sh
image/templates/files/: .gitignore  aws  aws-hpet  aws-system-pit  bash_profile-etherboot  boot_conf_builder  builder-postboot.sh  builder-postboot.xml  chrony.conf  diplomat-iso-loader-ttya.conf  diplomat-iso-loader-vga.conf  diplomat-loader.rc.local  gimlet-postboot.xml  install-captive.sh  install-helios.sh  install.xml  iso-loader-ethanol.conf  iso-loader-ttya.conf  netstack.xml  (+20 more)
macos/: console.sh  create.sh  destroy.sh  ip.sh  setup.sh  vmrun.sh
tools/engvm-build/: Cargo.toml
tools/engvm-build/src/: common.rs  config.rs  ensure.rs  genproto.rs  main.rs  projects.rs  repo.rs
tools/engvm-build/src/cmds/: image.rs  mod.rs  setup.rs
ubuntu/: create-host-bridge.sh  host-bridge.xml
(+64 files in other folders)
