[package]
name = "engvm-build"
version = "0.1.0"
edition = "2021"
#
# Report a specific error in the case that the toolchain is too old for
# let-else:
#
rust-version = "1.65.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
slog = "2.5"
slog-term = "2.5"
atty = "0.2"
libc = "0.2"
digest = "0.8"
md-5 = "0.8"
sha-1 = "0.8"
toml = "0.5"
walkdir = "2.3"
regex = "1.4"
time = { version = "0.3" }
helios-build-utils = { git = "ssh://git@github.com/oxidecomputer/helios-omicron-brand.git" }
tokio = { version = "1", features = ["full"] }
hiercmd = { git = "https://github.com/jclulow/hiercmd" }
